fix: not allow body bleed

--- a/src/styles/layout.pcss
+++ b/src/styles/layout.pcss
@@ -2,7 +2,7 @@ body {
   font-family: var(--font-body);
   font-size: 16px;
   font-weight: 400;
-  background-color: var(--color-grey-100);
+  background-color: var(--color-grey-200);
   color: var(--theme-text);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -10,7 +10,6 @@ body {
   text-wrap: balance;
   max-width: 100vw;
   overflow-x: hidden;
-  /* transition: background-color .3s ease-in-out, color .3s ease-in-out; */
 }
 
 .outer {
@@ -19,11 +18,7 @@ body {
   position: relative;
   z-index: 1;
   overflow-x: hidden;
-  /* transition: background-color .3s, color .3s; */
-
-  @media (--md) {
-    overflow-x: visible;
-  }
+  background-color: var(--color-white);
 }
 
 main {
